syntax = "proto3";

option java_multiple_files = true;
option java_package = "tw.com.tymgateway.grpc.gallery";
option java_outer_classname = "GalleryServiceProto";

package tymbackend.gallery;

// Gallery Service - 圖片畫廊服務
service GalleryService {
  // 獲取所有圖片
  rpc GetAllImages(GetAllImagesRequest) returns (GetAllImagesResponse);

  // 根據ID獲取圖片
  rpc GetImageById(GetImageByIdRequest) returns (GalleryResponse);

  // 保存圖片
  rpc SaveImage(GalleryData) returns (GalleryResponse);

  // 更新圖片
  rpc UpdateImage(UpdateImageRequest) returns (GalleryResponse);

  // 刪除圖片
  rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse);
}

// Gallery 数据模型 - 完整字段映射
message GalleryData {
  int32 id = 1;                       // 圖片ID（主键）
  string image_base64 = 2;            // 圖片Base64編碼
  string upload_time = 3;             // 上傳時間
  int64 version = 4;                  // 版本號(樂觀鎖)
}

// 请求和响应消息
message GetAllImagesRequest {}

message GetAllImagesResponse {
  repeated GalleryData galleries = 1;
}

message GetImageByIdRequest {
  int32 id = 1;
}

message UpdateImageRequest {
  int32 id = 1;
  string image_base64 = 2;
}

message DeleteImageRequest {
  int32 id = 1;
}

message DeleteImageResponse {
  bool success = 1;
  string message = 2;
}

message GalleryResponse {
  bool success = 1;
  string message = 2;
  GalleryData gallery = 3;
}