syntax = "proto3";

option java_multiple_files = true;
option java_package = "tw.com.tymgateway.grpc.people";
option java_outer_classname = "PeopleServiceProto";

package tymbackend.people;

// People Service - 人物服务
service PeopleService {
  // 获取所有人物
  rpc GetAllPeople(GetAllPeopleRequest) returns (GetAllPeopleResponse);
  
  // 根据名称获取人物
  rpc GetPeopleByName(GetPeopleByNameRequest) returns (PeopleResponse);
  
  // 插入人物
  rpc InsertPeople(PeopleData) returns (PeopleResponse);
  
  // 更新人物
  rpc UpdatePeople(UpdatePeopleRequest) returns (PeopleResponse);
  
  // 删除人物
  rpc DeletePeople(DeletePeopleRequest) returns (DeletePeopleResponse);
}

// People 数据模型 - 完整字段映射
message PeopleData {
  string name = 1;                    // 主键
  string name_original = 2;           // 原始名称
  string code_name = 3;               // 代号
  
  // 力量属性
  int32 physic_power = 4;             // 物理力量
  int32 magic_power = 5;              // 魔法力量
  int32 utility_power = 6;            // 实用能力
  
  // 基本信息
  string dob = 7;                     // 出生日期
  string race = 8;                    // 种族
  string attributes = 9;              // 属性
  string gender = 10;                 // 性别
  
  // 身体特征
  string ass_size = 11;               // 臀部尺寸
  string boobs_size = 12;             // 胸部尺寸
  int32 height_cm = 13;               // 身高(cm)
  int32 weight_kg = 14;               // 体重(kg)
  
  // 职业和技能
  string profession = 15;             // 职业
  string combat = 16;                 // 战斗能力
  string job = 17;                    // 工作
  string physics = 18;                // 物理特性
  
  // 个性特征
  string known_as = 19;               // 别名
  string personality = 20;            // 个性
  string interest = 21;               // 兴趣
  string likes = 22;                  // 喜好
  string dislikes = 23;               // 厌恶
  string favorite_foods = 24;         // 喜爱的食物
  
  // 关系和组织
  string concubine = 25;              // 后宫
  string faction = 26;                // 派系
  int32 army_id = 27;                 // 军队编号
  string army_name = 28;              // 军队名称
  int32 dept_id = 29;                 // 部门编号
  string dept_name = 30;              // 部门名称
  int32 origin_army_id = 31;          // 原始军队编号
  string origin_army_name = 32;       // 原始军队名称
  
  // 其他信息
  bool gave_birth = 33;               // 是否生育
  string email = 34;                  // 电子邮件
  int32 age = 35;                     // 年龄
  string proxy = 36;                  // 代理
  
  // JSON 属性
  string base_attributes = 37;        // 基础属性(JSON)
  string bonus_attributes = 38;       // 加成属性(JSON)
  string state_attributes = 39;       // 状态属性(JSON)
  
  // 元数据
  string created_at = 40;             // 创建时间
  string updated_at = 41;             // 更新时间
  int64 version = 42;                 // 版本号(乐观锁)
}

// 请求和响应消息
message GetAllPeopleRequest {}

message GetAllPeopleResponse {
  repeated PeopleData people = 1;
}

message GetPeopleByNameRequest {
  string name = 1;
}

message UpdatePeopleRequest {
  string name = 1;
  PeopleData people = 2;
}

message DeletePeopleRequest {
  string name = 1;
}

message PeopleResponse {
  bool success = 1;
  string message = 2;
  PeopleData people = 3;
}

message DeletePeopleResponse {
  bool success = 1;
  string message = 2;
}





