#!/usr/bin/env node

/**
 * æµ‹è¯•æ–¹æ¡ˆBï¼šçº¯ Spring Cloud Gateway æ¶æ„
 * 
 * æ¶æ„ï¼šå‰ç«¯ â†’ Spring Cloud Gateway Routes â†’ Backend REST Controllers
 */

const GATEWAY_BASE = 'http://localhost:8082/tymg';
const BACKEND_BASE = 'http://localhost:8080/tymb';

const tests = [
  // ========================================
  // People Module Tests
  // ========================================
  {
    name: 'People - Get All',
    method: 'POST',
    url: `${GATEWAY_BASE}/people/get-all`,
    expectedStatus: [200, 202],
    description: 'Gateway Route â†’ Backend PeopleController.getAllPeople()'
  },
  {
    name: 'People - Insert',
    method: 'POST',
    url: `${GATEWAY_BASE}/people/insert`,
    body: {
      name: 'TestCharacter',
      description: 'Test',
      bonus: 10,
      ability: 'Test Ability'
    },
    expectedStatus: [201, 400],
    description: 'Gateway Route â†’ Backend PeopleController.insertPeople()'
  },

  // ========================================
  // Weapons Module Tests
  // ========================================
  {
    name: 'Weapons - Get All',
    method: 'GET',
    url: `${GATEWAY_BASE}/weapons`,
    expectedStatus: [200],
    description: 'Gateway Route â†’ Backend WeaponController.getAllWeapons()'
  },

  // ========================================
  // Gallery Module Tests
  // ========================================
  {
    name: 'Gallery - Get All',
    method: 'POST',
    url: `${GATEWAY_BASE}/gallery/getAll`,
    expectedStatus: [401], // éœ€è¦è®¤è¯
    description: 'Gateway Route â†’ Backend GalleryController.getAllImages()'
  },

  // ========================================
  // Deckofcards (Blackjack) Tests
  // ========================================
  {
    name: 'Blackjack - Status',
    method: 'GET',
    url: `${GATEWAY_BASE}/deckofcards/blackjack/status`,
    expectedStatus: [401], // éœ€è¦è®¤è¯
    description: 'Gateway Route â†’ Backend BlackjackController.getStatus()'
  },

  // ========================================
  // Damage Calculation
  // ========================================
  {
    name: 'People - Damage Calculation',
    method: 'GET',
    url: `${GATEWAY_BASE}/people/damageWithWeapon?name=TestCharacter`,
    expectedStatus: [200, 400],
    description: 'Gateway Route â†’ Backend WeaponDamageController.calculateDamageWithWeapon()'
  },

  // ========================================
  // People Names
  // ========================================
  {
    name: 'People - Get Names',
    method: 'GET',
    url: `${GATEWAY_BASE}/people/names`,
    expectedStatus: [200],
    description: 'Gateway Route â†’ Backend PeopleController.getNames()'
  },

  // ========================================
  // Infrastructure Routes
  // ========================================
  {
    name: 'Health Consumer Check',
    method: 'GET',
    url: `${GATEWAY_BASE}/health/consumer`,
    expectedStatus: [200, 500],
    description: 'Gateway Route â†’ Backend HealthConsumerController'
  },
];

async function testEndpoint(test) {
  try {
    console.log(`\n${'='.repeat(80)}`);
    console.log(`ğŸ“ æµ‹è¯•: ${test.name}`);
    console.log(`ğŸ”— URL: ${test.url}`);
    console.log(`ğŸ“Š æ–¹æ³•: ${test.method}`);
    console.log(`ğŸ“‹ æµç¨‹: ${test.description}`);
    console.log(`${'='.repeat(80)}`);

    const options = {
      method: test.method,
      headers: {
        'Content-Type': 'application/json',
        'Accept': 'application/json'
      }
    };

    if (test.body && test.method !== 'GET') {
      options.body = JSON.stringify(test.body);
    }

    const startTime = Date.now();
    const response = await fetch(test.url, options);
    const duration = Date.now() - startTime;

    let data;
    const contentType = response.headers.get('content-type');
    if (contentType && contentType.includes('application/json')) {
      data = await response.json();
    } else {
      data = await response.text();
    }

    const passed = test.expectedStatus.includes(response.status);
    const status = passed ? 'âœ… PASS' : 'âŒ FAIL';

    console.log(`\n${status}`);
    console.log(`ğŸ“¡ çŠ¶æ€ç : ${response.status} ${response.statusText}`);
    console.log(`â±ï¸  å“åº”æ—¶é—´: ${duration}ms`);
    
    if (response.ok) {
      console.log(`âœ… Spring Cloud Gateway æˆåŠŸè½¬å‘è¯·æ±‚åˆ° Backend REST API`);
      if (typeof data === 'object') {
        console.log(`ğŸ“¦ å“åº”æ•°æ®ç±»å‹: ${Array.isArray(data) ? 'Array' : 'Object'}`);
        if (Array.isArray(data)) {
          console.log(`ğŸ“Š æ•°ç»„é•¿åº¦: ${data.length}`);
        }
      }
    } else {
      console.log(`âš ï¸  å“åº”å†…å®¹é¢„è§ˆ: ${typeof data === 'string' ? data.substring(0, 200) : JSON.stringify(data).substring(0, 200)}`);
    }

    return { test: test.name, passed, status: response.status, duration, data };
  } catch (error) {
    console.log(`\nâŒ ç½‘ç»œé”™è¯¯`);
    console.log(`ğŸ”´ é”™è¯¯: ${error.message}`);
    return { test: test.name, passed: false, error: error.message };
  }
}

async function main() {
  console.log('\nğŸš€ å¼€å§‹æµ‹è¯•ï¼šçº¯ Spring Cloud Gateway æ¶æ„\n');
  console.log(`Gateway åœ°å€: ${GATEWAY_BASE}`);
  console.log(`Backend åœ°å€: ${BACKEND_BASE}`);
  console.log(`æµ‹è¯•æ•°é‡: ${tests.length}`);
  console.log(`\næ¶æ„è¯´æ˜:`);
  console.log(`  å‰ç«¯ â†’ Spring Cloud Gateway (WebFlux)`);
  console.log(`       â†“ (HTTP Routes)`);
  console.log(`  Backend REST Controllers`);
  console.log(`       â†“ (Service Layer)`);
  console.log(`  Database\n`);

  const results = [];
  for (const test of tests) {
    const result = await testEndpoint(test);
    results.push(result);
    await new Promise(resolve => setTimeout(resolve, 500)); // å»¶è¿Ÿé¿å…è¿‡è½½
  }

  // ç»Ÿè®¡
  console.log(`\n${'='.repeat(80)}`);
  console.log('ğŸ“Š æµ‹è¯•æ€»ç»“');
  console.log(`${'='.repeat(80)}`);

  const passed = results.filter(r => r.passed).length;
  const failed = results.filter(r => !r.passed).length;
  const total = results.length;

  console.log(`\næ€»æµ‹è¯•æ•°: ${total}`);
  console.log(`âœ… é€šè¿‡: ${passed}`);
  console.log(`âŒ å¤±è´¥: ${failed}`);
  console.log(`ğŸ“ˆ æˆåŠŸç‡: ${((passed / total) * 100).toFixed(2)}%`);

  if (passed === total) {
    console.log('\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼çº¯ Spring Cloud Gateway æ¶æ„å·¥ä½œæ­£å¸¸');
    console.log('âœ… é‡æ„æˆåŠŸï¼š');
    console.log('   - Gateway: ä½¿ç”¨ Spring Cloud Gateway Routes (WebFlux)');
    console.log('   - Backend: REST Controllers æ­£å¸¸å·¥ä½œ');
    console.log('   - æ— éœ€ gRPC å¤æ‚åº¦');
  } else {
    console.log('\nâš ï¸  éƒ¨åˆ†æµ‹è¯•å¤±è´¥ï¼Œè¯·æ£€æŸ¥ï¼š');
    console.log('   - Backend æ˜¯å¦å¯åŠ¨ï¼Ÿ(Port 8080)');
    console.log('   - Gateway æ˜¯å¦å¯åŠ¨ï¼Ÿ(Port 8082)');
    console.log('   - è·¯ç”±é…ç½®æ˜¯å¦æ­£ç¡®ï¼Ÿ');
    
    console.log('\nå¤±è´¥çš„æµ‹è¯•ï¼š');
    results.filter(r => !r.passed).forEach(r => {
      console.log(`   âŒ ${r.test} - ${r.error || `Status: ${r.status}`}`);
    });
  }

  console.log('\n');
}

main().catch(error => {
  console.error('âŒ æµ‹è¯•è„šæœ¬æ‰§è¡Œå¤±è´¥:', error);
  process.exit(1);
});

